made buttons and started js

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
         <!--row 1-->
         <div class="row">
-            <h2>February 7, 2007: <h4>My Birthday!</h4></h2>
+            <div id="date">
+                <h2>February 7, 2007: <h4>My Birthday!</h4></h2>
+            </div>
         </div>
         <!--row 1 end-->
 
@@ -75,13 +77,61 @@
         <div class="row">
             <!--heading for more events-->
             <div class="col">
-                <div class="more">
+                <div id="more">
                     <h4>More Events:</h4>
                 </div>
             </div>
         </div>
         <!--row 3 end-->
 
+        <!--row 4-->
+        <div class="row">
+            <div class="col-md-6">
+                <button onclick="feb1812()" class="btn btn-secondary">February 7, 1812</button>
+            </div>
+        </div>
+        <!--row 4 end-->
+
+        <!--row 5-->
+        <div class="row">
+            <div class="col-md-6">
+                <button onclick="feb1964()" class="btn btn-secondary">February 7, 1964</button>
+            </div>
+        </div>
+        <!--row 5 end-->
+
+        <!--row 6-->
+        <div class="row">
+            <div class="col-md-6">
+                <button onclick="feb1984()" class="btn btn-secondary">February 7, 1984</button>
+            </div>
+        </div>
+        <!--row 6 end-->
+
+        <!--row 7-->
+        <div class="row">
+            <div class="col-md-6">
+                <button onclick="feb2007()" class="btn btn-secondary">February 7, 2007</button>
+            </div>
+        </div>
+        <!--row 7 end-->
+
+        <!--row 8-->
+        <div class="row">
+            <div class="col-md-6">
+                <button onclick="feb2010()" class="btn btn-secondary">February 7, 2010</button>
+            </div>
+        </div>
+        <!--row 8 end-->
+
+        <!--row 9-->
+        <div class="row">
+            <div class="col-md-6">
+                <button onclick="feb2022()" class="btn btn-secondary">February 7, 2022</button>
+            </div>
+        </div>
+        <!--row 9 end-->
+        
 
 
 
