--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <!--heading for more events-->
             <div class="col">
                 <div id="more">
-                    <h4>More Events:</h4>
+                    <h4>More Events: <br> <h5>Click on these buttons to see what else happened on my birthday!</h5></h4>
                 </div>
             </div>
         </div>
@@ -123,6 +123,28 @@
 
 
     </div>
+    <!--footer start-->
+    <footer class="bg-light text-center text-white">
+        <!-- Grid container -->
+        <div class="container p-4 pb-0">
+            <!-- Section: Social media -->
+            <section class="mb-4">
+                <!-- Github -->
+                <a class="btn text-white btn-floating m-1" style="background-color: #333333;" href="https://github.com/larisaa07"
+                role="button"><i class="fab fa-github"></i></a>
+            </section>
+            <!-- Section: Social media -->
+        </div>
+        <!-- Grid container -->
+      
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+             © 2024 Copyright:
+            <a class="text-white" href="https://mdbootstrap.com/">Larisa Avetisyan</a>
+        </div>
+            <!-- Copyright -->
+    </footer>
+    <!--footer end-->
 
 
 
