--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <!--col 1-->
             <div class="col-md-6 text-center">
                 <!--picture-->
-                <img src="/imgs/Me+Flowers.jpeg" class="portrait" alt="" id="image">
+                <img src="/imgs/MeFlowers.jpeg" class="portrait" alt="" id="image">
             </div>
             <!--col 1 end-->
 
